WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159902
WebKit nightly fails to build on macOS Sierra
https://bugs.webkit.org/show_bug.cgi?id=159902
Summary
WebKit nightly fails to build on macOS Sierra
Anders Carlsson
Reported
2016-07-18 16:01:02 PDT
WebKit nightly fails to build on macOS Sierra
Attachments
Patch
(82.57 KB, patch)
2016-07-18 16:29 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-07-18 16:29:10 PDT
Created
attachment 283951
[details]
Patch
WebKit Commit Bot
Comment 2
2016-07-18 16:31:29 PDT
Attachment 283951
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/applepay/cocoa/PaymentMerchantSessionCocoa.mm:32: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:7: #ifndef header guard has wrong style, please use: ucurr_h [build/header_guard] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:10: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:54: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:56: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:99: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:100: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:113: The parameter name "key" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:135: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:136: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:137: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:138: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:136: The parameter name "nameStyle" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:139: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:139: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:159: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:163: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:176: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:176: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:189: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:189: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:274: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:275: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:276: The parameter name "errorCode" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:276: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:294: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:294: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:295: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:295: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:318: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:318: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:322: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/mac/icu/unicode/ucurr.h:342: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:43: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:49: Missing spaces around | [whitespace/operators] [3] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:52: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WTF/icu/unicode/ucurr.h:7: #ifndef header guard has wrong style, please use: ucurr_h [build/header_guard] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:10: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WTF/icu/unicode/ucurr.h:54: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:56: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:99: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:100: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:113: The parameter name "key" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:135: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:136: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:137: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:138: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:136: The parameter name "nameStyle" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:139: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:139: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:159: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:163: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:176: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:176: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:189: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:189: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:274: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:275: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:276: The parameter name "errorCode" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:276: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:294: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:294: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:295: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:295: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:318: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WTF/icu/unicode/ucurr.h:318: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:322: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WTF/icu/unicode/ucurr.h:342: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:7: #ifndef header guard has wrong style, please use: ucurr_h [build/header_guard] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:10: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/icu/unicode/ucurr.h:54: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:56: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:99: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:100: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:113: The parameter name "key" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:135: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:136: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:137: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:138: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:136: The parameter name "nameStyle" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:139: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:139: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:159: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:163: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:176: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:176: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:189: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:189: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:274: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:275: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:276: The parameter name "errorCode" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:276: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:294: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:294: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:295: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:295: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:318: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebCore/icu/unicode/ucurr.h:318: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:322: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/icu/unicode/ucurr.h:342: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:7: #ifndef header guard has wrong style, please use: ucurr_h [build/header_guard] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:10: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:54: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:56: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:99: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:100: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:113: The parameter name "key" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:135: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:136: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:137: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:138: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:136: The parameter name "nameStyle" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:139: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:139: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:159: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScrip tCore/icu/unicode/ucurr.h:163: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:176: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:176: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:189: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:189: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:274: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:275: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:276: The parameter name "errorCode" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:276: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:294: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:294: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:295: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:295: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:318: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:318: The parameter name "date" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:322: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/icu/unicode/ucurr.h:342: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 132 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2016-07-18 16:55:33 PDT
Committed
r203381
: <
http://trac.webkit.org/changeset/203381
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug