WebKit nightly fails to build on macOS Sierra https://bugs.webkit.org/show_bug.cgi?id=159902 rdar://problem/27365672

Reviewed by Tim Horton.

Source/JavaScriptCore:

* icu/unicode/ucurr.h: Added.
Add ucurr.h from ICU.

Source/WebCore:

* Modules/applepay/cocoa/PaymentCocoa.mm:
* Modules/applepay/cocoa/PaymentContactCocoa.mm:
* Modules/applepay/cocoa/PaymentMerchantSessionCocoa.mm:
* Modules/applepay/cocoa/PaymentMethodCocoa.mm:
Use new PassKitSPI header.

* WebCore.xcodeproj/project.pbxproj:
Add new PassKitSPI header.

* icu/unicode/ucurr.h: Added.
Add ucurr.h from ICU.

* platform/spi/cocoa/PassKitSPI.h: Added.
Add new PassKitSPI header.

Source/WebKit/mac:

* icu/unicode/ucurr.h: Added.
Add ucurr.h from ICU.

Source/WebKit2:

* Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:
* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.h:
* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
* UIProcess/ApplePay/mac/WebPaymentCoordinatorProxyMac.mm:
Use new PassKitSPI header.

Source/WTF:

* icu/unicode/ucurr.h: Added.
Add ucurr.h from ICU.

Canonical link: https://commits.webkit.org/178066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203381 268f45cc-cd09-0410-ab3c-d52691b4dbfc